--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <swagger.version>2.7.0</swagger.version>
+    <swagger.version>2.9.2</swagger.version>
   </properties>
 
   <dependencies>
@@ -34,41 +34,45 @@
    <dependency>
        <groupId>org.geotools</groupId>
        <artifactId>gt-main</artifactId>
-       <version>17.0</version>
+       <version>22.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.geotools/gt-api -->
     <dependency>
         <groupId>org.geotools</groupId>
         <artifactId>gt-api</artifactId>
-        <version>17.0</version>
+        <version>20.5</version>
     </dependency>
-
     <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger2</artifactId>
         <version>${swagger.version}</version>
         <scope>compile</scope>
+        <exclusions>
+	        <exclusion>
+	            <groupId>io.swagger</groupId>
+	            <artifactId>swagger-models</artifactId>
+	        </exclusion>
+   		 </exclusions>
     </dependency>
+    <dependency>
+    	<groupId>io.swagger</groupId>
+	    <artifactId>swagger-models</artifactId>
+	    <version>1.6.1</version>
+	</dependency>
     <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
         <version>${swagger.version}</version>
         <scope>compile</scope>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>com.bedatadriven</groupId>
       <artifactId>jackson-datatype-jts</artifactId>
-      <version>2.2</version>
+      <version>2.4</version>
     </dependency>
     <dependency>
     	<groupId>com.fasterxml.jackson.datatype</groupId>
@@ -78,10 +82,7 @@
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
    </dependency>
-   <dependency>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-data-jpa</artifactId>
-   </dependency>
+
    <dependency>
        <groupId>org.hsqldb</groupId>
        <artifactId>hsqldb</artifactId>
@@ -92,17 +93,16 @@
 		<artifactId>spring-boot-starter-tomcat</artifactId>
 		<scope>provided</scope>
 	</dependency>
-    <!--  Gson: Java to Json conversion -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.8.5</version>
+      <version>2.8.6</version>
       <scope>compile</scope>
     </dependency>
      <dependency>
     <groupId>junit</groupId>
     <artifactId>junit</artifactId>
-    <version>4.12</version>
+    <version>4.13</version>
 	</dependency>
 
   </dependencies>
@@ -136,18 +136,18 @@
   </build>
 
   <repositories>
-    <repository>
-        <id>geotools</id>
-        <name>Geotools</name>
-        <url>http://download.osgeo.org/webdav/geotools/</url>
-        <layout>default</layout>
+  	<repository>
+  		<id>mvnrepository</id>
+  		<name>Maven</name>
+  		<url>https://repo.osgeo.org/repository/release/</url>
+  		<layout>default</layout>
         <releases>
             <enabled>true</enabled>
         </releases>
         <snapshots>
             <enabled>false</enabled>
         </snapshots>
-    </repository>
+  	</repository>
     <repository>
         <id>springsource</id>
         <name>Spring Source</name>
