--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
     <artifactId>junit</artifactId>
     <version>4.13</version>
 	</dependency>
+<!-- 	<dependency> -->
+<!--     	<groupId>org.openjdk.jol</groupId> -->
+<!--     	<artifactId>jol-core</artifactId> -->
+<!--     	<version>0.16</version> -->
+<!-- 	</dependency> -->
 
   </dependencies>
 
